Implement validation checks
Currently all passing, so that's good